docs/_sass/header.scss
header { /** main header **/
	position: fixed;
	top: 0px;
	left: 0px;
	width: 100%;
	height: $header-height;
	color: $white-font-color;
	background-color: rgba(0,0,0,0.0);
	transition: background-color 0.3s linear;
	z-index: 2;

	& > div { /** header inner container **/
		height: 100%;
		display: flex;
		flex-direction: row;
		align-items: center;
		justify-content: space-between;
		margin: auto;
		padding: 0px 40px;

		& > a { /** logo link to homepage **/
			margin-right: 20px;
		}
	}
}

/**
 *
 * HEADER ON scroll
 *
 **/
html:not([data-scroll='0']) {
	header {
		background-color: rgba(0,0,0,1.0);
	}
}

header nav > ul { /** main navigation **/
	display: flex;
	flex-direction: row;
	list-style-type: none;
	align-items: center;
	font-size: 1em;
	padding-inline-start: 0px;

	& > li {
		margin: 0px 12px;
		position: relative;

		&.login {
			margin-right: 0px;
		}

		a {
			color: inherit;
			font-size: 1em;
		}

		& > a {
			position: relative;
		
			&:after { /** line effect on hover **/
				content: '';
				position: absolute;
				left: 0px;
				bottom: -4px;
				width: 0%;
				border-bottom: 1px solid #fff;
				transition: width 0.2s linear;
			}

			&:hover:after {
				width: 100%;
			}

			&.btn:hover:after {
				width: 0%;
			}
		}

		&:hover > ul {
			visibility: visible;
		}

		& > ul { /** first level submenu **/
			visibility: hidden;
			list-style-type: none;
			position: absolute;
			left: -20px;
			top: 1em;
			padding: 0px;
			padding-top: 16px;
			color: #000;

			& > li {
				background-color: $white-background-color;
				border-left: 1px solid $grey-border-color;
				border-right: 1px solid $grey-border-color;
				white-space: nowrap;

				&:first-child {
					border-top: 1px solid $grey-border-color;
				}

				&:last-child {
					border-bottom: 1px solid $grey-border-color;
				}

				&:hover {
					background-color: $grey-border-color;
				}

				& > a {
					display: block;
					padding: 5px 20px;
				}

				&.separator {
					height: 10px;
					&:hover {
						background-color: $white-background-color;
					}
				}
			}
		}
	}
}

/**
 *
 * HAMBURGER
 *
 **/

header nav > a#main-menu-toggle {
	display: none;
	width: 30px;
	height: 30px;
	margin-left: 20px;
	flex-direction: column;
	justify-content: space-around;
	padding: 8px;

	& > div {
		background: $white-background-color;
		height: 4px;	
	}
}

/**
 *
 * SEARCH
 *
 **/

 li.search {
 	display: flex;

 	span {
 		padding-top:5px;

 		svg {
 			width: 16px;
 			height: 16px;
 			fill: #fff;

 			path {
 				stroke-width: 2;
 				stroke: #fff;
 			}
 		}

 		&:after { /** line effect on hover **/
			content: '';
			position: absolute;
			left: 0px;
			bottom: -4px;
			width: 0%;
			border-bottom: 1px solid #fff;
			transition: width 0.2s linear;
		}

		&:hover:after {
			width: 100%;
		}
 	}

 	& > div {
		visibility: hidden;
		position: absolute;
		right: -5px;
		top: 1em;
		padding: 0px;
		padding-top: 16px;

		div {
			background-color: $white-background-color;
			border-left: 1px solid $grey-border-color;
			border-right: 1px solid $grey-border-color;
	
			input {
		 		border: 1px solid transparent;
		 		font-size: 16px;
		 		line-height: 1.65;
		 		padding: 6px;
		 		min-width: 210px;

		 		&:focus {
		 			outline: none;
		 		}
		 	}
		}
	}

	&:hover {
		div {
			visibility: visible;
		}
	}
 	
 }


/**
 *
 * MOBILE
 *
 **/

@media only screen and (max-width: 1000px) {
	header {
		background-color: #000;
		z-index: 2;

		& > div {
			margin-top: 0px;
		}
	}

	header nav > a#main-menu-toggle {
		display: flex;
	}

	header nav > ul {
		display: none;
		position: fixed;
		left: 0px;
		top: 80px;
		bottom: 0px;
		margin: 0px;
		overflow-y: auto;
		flex-direction: column;
		width: 100%;
		
		align-items: stretch;
		background-color: $black-background-color;

		&.open {
			display: block;
		}

		& > li {
			margin: 0px;

			& > a:hover:after {
				width: 0%;
			}

			& > a.btn {
				display: block;
				margin: 10px 30px;
			}

			& > ul {
				position: static;
				background-color: initial;
				color: inherit;
				display: block;
				visibility: visible;
				padding-top: 0px;

				& > li {
					background-color: $black-background-color;
					border-right: 0px solid transparent;
					border-left: 0px solid transparent;

					& > a {
						padding-left: 40px;
					}

					&:hover {
						background-color: initial;
					}

					&:first-child {
						border-top: 0px solid transparent;
					}

					&:last-child {
						border-bottom: 0px solid transparent;
					}
				}
			}
		}
	}

	header nav > ul li > a {
		border-top: 1px solid $dark-grey-border-color;
		display: block;
		padding: 10px 20px;
	}

	header nav > ul > li.search {
		display: flex;
		flex-direction: row;
		padding: 15px 30px;

		span {
			display: none;
		}

		& > div {
			position: static;
			padding-top: 0px;
			visibility: visible;
			flex-grow: 1;

			& > div {

				input {
					min-width: auto;
				}
			}
		}

		
	}
}

